--- a/Index.html
+++ b/Index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Personal Site</title>
+  <title>MaxGuMu | Personal Site</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-black text-pink-200 font-sans min-h-screen">
 
   <!-- Navbar -->
   <nav class="bg-pink-500 p-4 flex justify-between items-center shadow-md">
-    <div class="text-2xl font-bold text-black">MySite</div>
+    <div class="text-2xl font-bold text-black">MaxGuMu</div>
     <ul class="flex space-x-6 text-black font-semibold">
       <li><a href="#" onclick="navigate('home')" class="hover:text-white transition">Home</a></li>
       <li><a href="#" onclick="navigate('blog')" class="hover:text-white transition">Blog</a></li>
@@ -21,22 +21,22 @@
 
   <!-- Content -->
   <div id="content" class="p-6 max-w-3xl mx-auto text-pink-100">
-    <!-- Dynamic content will go here -->
+    <!-- Content will be dynamically inserted here -->
   </div>
 
   <script>
     const pages = {
       home: `
-        <h1 class="text-4xl font-bold mb-4 text-pink-400">Welcome to My Site</h1>
-        <p>This is the <strong>Home</strong> page of my personal site with a pink & black theme.</p>
+        <h1 class="text-4xl font-bold mb-4 text-pink-400">Welcome to MaxGuMu</h1>
+        <p>This is the <strong>Home</strong> page of my personal site. Enjoy exploring!</p>
       `,
       blog: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">Blog</h1>
-        <p>Here’s where I post about tech, life, and creativity!</p>
+        <p>Latest thoughts, updates, and stories from MaxGuMu.</p>
       `,
       about: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">About Me</h1>
-        <p>I'm Maxy, a passionate creator of PCs and digital content.</p>
+        <p>Hello! I'm Max, the creator of MaxGuMu — a space for tech, games, and creativity.</p>
       `,
       product: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">My Products</h1>
@@ -52,7 +52,7 @@
       document.getElementById('content').innerHTML = pages[page];
     }
 
-    // Default page
+    // Load default page
     navigate('home');
   </script>
 
