--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
         <p>This is the <strong>Home</strong> page of my personal site. Enjoy exploring!</p>
       `,
       blog: `
+        <a herf="blog.html">
         <h1 class="text-4xl font-bold mb-4 text-pink-400">Blog</h1>
         <p>Latest thoughts, updates, and stories from MaxGuMu.</p>
       `,
       about: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">About Me</h1>
-        <p>Hello! I'm Max, the creator of MaxGuMu — a space for tech, games, and creativity.</p>
+        <p>Hello! I'm Max, the creator of MaxGuMu â€” a space for tech, games, and creativity.</p>
       `,
       product: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">My Products</h1>
