--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>This is the <strong>Home</strong> page of my personal site. Enjoy exploring!</p>
       `,
       blog: `
-        <a herf="blog.html">
+        <a herf="Blog.html">
         <h1 class="text-4xl font-bold mb-4 text-pink-400">Blog</h1>
         <p>Latest thoughts, updates, and stories from MaxGuMu.</p>
       `,
