--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         <p>This is the <strong>Home</strong> page of my personal site. Enjoy exploring!</p>
       `,
       blog: `
-        <a herf="Blog.html">
-        <h1 class="text-4xl font-bold mb-4 text-pink-400">Blog</h1>
-        <p>Latest thoughts, updates, and stories from MaxGuMu.</p>
+        <h1> <button Quiclick="location.herf='Blog.html'" class="text-4xl font-bold mb-4 text-pink-400">Blog</button> </h1>
       `,
       about: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">About Me</h1>
