--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>This is the <strong>Home</strong> page of my personal site. Enjoy exploring!</p>
       `,
       blog: `
-        <h1> <button Quiclick="location.herf='Blog.html'" class="text-4xl font-bold mb-4 text-pink-400">Blog</button> </h1>
+        <h1> <button Quiclick="location.herf='https://github.com/MaxGuMu2133/MaxGuMu.github.io/blob/main/Blog.html'" class="text-4xl font-bold mb-4 text-pink-400">Blog</button> </h1>
       `,
       about: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">About Me</h1>
