--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
         <p class="text-pink-200 mt-2">ผมเชื่อว่าใครๆ ก็สามารถเริ่มต้นกับไอทีได้ โดยไม่ต้องมีงบเยอะ ขอแค่เข้าใจและรู้จักเลือกอุปกรณ์ให้เหมาะสม</p>
       `,
       product: `
-        <h1 class="text-4xl font-bold mb-4 text-pink-400">สินค้าของเรา</h1>
-        <ul class="list-disc ml-6 text-pink-200 space-y-2">
-          <li>คอมพิวเตอร์มือสองประกอบเอง ราคาประหยัด</li>
-          <li>การ์ดจอใช้งานได้จริง (ตรวจเช็คแล้ว)</li>
-          <li>อะไหล่และอุปกรณ์เสริมคอมพิวเตอร์</li>
-          <li>บริการให้คำแนะนำก่อนเลือกซื้อ</li>
-        </ul>
+       <h1 class="text-4xl font-bold mb-4 text-pink-400">ช่อง YouTube ของเรา</h1>
+       <p class="text-pink-200 mb-4">
+  พบกับวิดีโอเกี่ยวกับคอมมือสอง รีวิวสินค้า และทริคเทคโนโลยีมากมายบนช่อง <strong>MaxGuMu</strong> ของเรา!
+  </p>
+<a href="https://www.youtube.com/@MaxGuMuChan" target="_blank"
+   class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition">
+  ▶ ไปที่ช่อง YouTube: @MaxGuMuChan
+</a>
       `
     };
 
