--- a/index.html
+++ b/index.html
@@ -32,17 +32,41 @@
       `,
       blog: `
         <h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
-        <article class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition">
-          <h2 class="text-2xl font-bold text-pink-300 mb-4">🐧 แนะนำสำหรับคนที่อยากใช้ Linux</h2>
-          <p class="text-pink-200 leading-relaxed">
-            หากคุณเบื่อ Windows หรือรู้สึกว่าเครื่องเริ่มช้า Linux อาจเป็นทางเลือกใหม่ที่น่าสนใจ โดยเฉพาะ Linux Mint หรือ Ubuntu ที่ใช้งานง่าย เหมาะกับผู้เริ่มต้น
-            <br><br>
-            Linux ฟรี ปลอดภัย ไม่มีไวรัส เหมาะสำหรับการฟื้นฟูเครื่องเก่า หรือใช้ในงานเขียนโค้ด โปรแกรมเมอร์ และคนรักอิสระในการปรับแต่งระบบ
-            <br><br>
-            MaxGuMu สนับสนุนการใช้ Linux กับคอมมือสองเพื่อความคุ้มค่า ลองดู แล้วคุณอาจหลงรัก Linux เหมือนเรา!
-          </p>
-        </article>
-      `,
+
+  <!-- บทความ 1 -->
+  <article class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition mb-6">
+    <h2 class="text-2xl font-bold text-pink-300 mb-4">🐧 แนะนำสำหรับคนที่อยากใช้ Linux</h2>
+    <p class="text-pink-200 leading-relaxed">
+      หากคุณเบื่อ Windows หรือรู้สึกว่าเครื่องเริ่มช้า Linux อาจเป็นทางเลือกใหม่ที่น่าสนใจ โดยเฉพาะ Linux Mint หรือ Ubuntu ที่ใช้งานง่าย เหมาะกับผู้เริ่มต้น
+      <br><br>
+      Linux ฟรี ปลอดภัย ไม่มีไวรัส เหมาะสำหรับการฟื้นฟูเครื่องเก่า หรือใช้ในงานเขียนโค้ด โปรแกรมเมอร์ และคนรักอิสระในการปรับแต่งระบบ
+      <br><br>
+      MaxGuMu สนับสนุนการใช้ Linux กับคอมมือสองเพื่อความคุ้มค่า ลองดู แล้วคุณอาจหลงรัก Linux เหมือนเรา!
+    </p>
+  </article>
+
+  <!-- บทความ 2 -->
+  <article class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition">
+    <h2 class="text-2xl font-bold text-pink-300 mb-4">🖥️ อุปกรณ์ทำคลิปของ MaxGuMu (น้องเบต้า)</h2>
+    <p class="text-pink-200 leading-relaxed mb-4">
+      คอมหลักที่ใช้ตัดต่อ ทำคลิป และเล่นเกมเบาๆ ของเราชื่อว่า <strong>น้องเบต้า</strong> เป็นเครื่องที่ประกอบจากของมือสองและอะไหล่ประหยัด แต่ใช้งานได้ดีมาก
+    </p>
+    <ul class="list-disc text-pink-200 ml-6 space-y-1">
+      <li><strong>CPU:</strong> AMD Athlon 3000G</li>
+      <li><strong>RAM:</strong> 16GB DDR4 3200MHz (8GB x 2)</li>
+      <li><strong>Mainboard:</strong> MSI A320M-A Pro</li>
+      <li><strong>GPU:</strong> Nvidia GeForce GT 1030 2GB GDDR5</li>
+      <li><strong>SSD:</strong> T-Force Vulcan 256GB SATA3</li>
+      <li><strong>SSD2:</strong> WD Green 120GB SATA3</li>
+      <li><strong>HDD:</strong> 500GB 7200RPM จำนวน 2 ลูก</li>
+      <li><strong>Case:</strong> Cooler Master N200</li>
+      <li><strong>OS:</strong> Linux Mint 22.1 และ Windows 11 Pro 24H2</li>
+    </ul>
+    <p class="text-pink-200 mt-4">
+      คอมเครื่องนี้อาจไม่แรงที่สุด แต่ก็เพียงพอสำหรับงานตัดต่อเบาๆ และทำ YouTube ด้วยความคุ้มค่าแบบสุดๆ!
+    </p>
+  </article>
+`,
       about: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">About Me</h1>
         <p class="text-pink-200">สวัสดีครับ! ผมชื่อ Max ผู้ก่อตั้งเว็บไซต์ MaxGuMu เป็นคนที่รักการแต่งคอม ทำคอมมือสอง และช่วยให้คนได้ใช้งานเทคโนโลยีอย่างคุ้มค่า</p>
