--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <p class="text-pink-200">ที่นี่คือเว็บไซต์ส่วนตัวของฉัน สำหรับแบ่งปันเรื่องราวเกี่ยวกับคอมพิวเตอร์ ไอที และแรงบันดาลใจต่างๆ</p>
       `,
       blog: `
-        <h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
+  <h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
 
-  <!-- บทความ 1 -->
+  <!-- บทความ 1: Linux -->
   <article class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition mb-6">
     <h2 class="text-2xl font-bold text-pink-300 mb-4">🐧 แนะนำสำหรับคนที่อยากใช้ Linux</h2>
     <p class="text-pink-200 leading-relaxed">
@@ -45,9 +45,29 @@
     </p>
   </article>
 
-  <!-- บทความ 2 -->
+  <!-- บทความ 2: น้องอัลฟ่า -->
+  <article class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition mb-6">
+    <h2 class="text-2xl font-bold text-pink-300 mb-4">🖧 น้องอัลฟ่า - คอมเปิดเซิร์ฟ Minecraft ที่บ้าน</h2>
+    <p class="text-pink-200 leading-relaxed mb-4">
+      คอมพิวเตอร์อีกเครื่องในบ้านของ MaxGuMu ชื่อว่า <strong>น้องอัลฟ่า</strong> ใช้สำหรับเปิดเซิร์ฟเวอร์ Minecraft เพื่อให้เพื่อนๆ หรือคนในบ้านสามารถเข้าเล่นด้วยกันได้แบบ LAN หรือแบบ IP ภายใน
+    </p>
+    <ul class="list-disc text-pink-200 ml-6 space-y-1">
+      <li><strong>CPU:</strong> Intel Pentium G4400</li>
+      <li><strong>RAM:</strong> 8GB DDR4 2133MHz (4GB x 2)</li>
+      <li><strong>Mainboard:</strong> GIGABYTE H110M-DS2</li>
+      <li><strong>Storage:</strong> HDD 250GB 7200RPM WD Blue</li>
+      <li><strong>Case:</strong> Chi-La Gview</li>
+      <li><strong>OS:</strong> Windows 8.1 Pro</li>
+      <li><strong>หน้าที่:</strong> ใช้เป็น Server Minecraft ภายในบ้าน</li>
+    </ul>
+    <p class="text-pink-200 mt-4">
+      แม้จะเป็นเครื่องเก่า แต่ก็สามารถรันเซิร์ฟเวอร์ Minecraft ได้ดีสำหรับผู้เล่น 5-10 คนแบบลื่นๆ โดยไม่ต้องใช้ทรัพยากรเยอะ
+    </p>
+  </article>
+
+  <!-- บทความ 3: น้องเบต้า -->
   <article class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition">
-    <h2 class="text-2xl font-bold text-pink-300 mb-4">🖥️ อุปกรณ์ทำคลิปของ MaxGuMu (น้องเบต้า)</h2>
+    <h2 class="text-2xl font-bold text-pink-300 mb-4">🖥️ น้องเบต้า - อุปกรณ์ทำคลิปของ MaxGuMu</h2>
     <p class="text-pink-200 leading-relaxed mb-4">
       คอมหลักที่ใช้ตัดต่อ ทำคลิป และเล่นเกมเบาๆ ของเราชื่อว่า <strong>น้องเบต้า</strong> เป็นเครื่องที่ประกอบจากของมือสองและอะไหล่ประหยัด แต่ใช้งานได้ดีมาก
     </p>
@@ -58,7 +78,7 @@
       <li><strong>GPU:</strong> Nvidia GeForce GT 1030 2GB GDDR5</li>
       <li><strong>SSD:</strong> T-Force Vulcan 256GB SATA3</li>
       <li><strong>SSD2:</strong> WD Green 120GB SATA3</li>
-      <li><strong>HDD:</strong> 500GB 7200RPM จำนวน 2 ลูก</li>
+      <li><strong>HDD:</strong> 500GB 7200RPM × 2 ลูก</li>
       <li><strong>Case:</strong> Cooler Master N200</li>
       <li><strong>OS:</strong> Linux Mint 22.1 และ Windows 11 Pro 24H2</li>
     </ul>
