--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <h1 class="text-4xl font-bold mb-4 text-pink-400">ยินดีต้อนรับสู่ MaxGuMu</h1>
         <p class="text-pink-200">ที่นี่คือเว็บไซต์ส่วนตัวของฉัน สำหรับแบ่งปันเรื่องราวเกี่ยวกับคอมพิวเตอร์ ไอที และแรงบันดาลใจต่างๆ</p>
       `,
-      blog: `
+  blog: `
   <h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
 
-  <!-- บทความ 1: Linux -->
+  <!-- บทความ 1: แนะนำ Linux -->
   <article class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition mb-6">
     <h2 class="text-2xl font-bold text-pink-300 mb-4">🐧 แนะนำสำหรับคนที่อยากใช้ Linux</h2>
     <p class="text-pink-200 leading-relaxed">
@@ -45,33 +45,13 @@
     </p>
   </article>
 
-  <!-- บทความ 2: น้องอัลฟ่า -->
-  <article class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition mb-6">
-    <h2 class="text-2xl font-bold text-pink-300 mb-4">🖧 น้องอัลฟ่า - คอมเปิดเซิร์ฟ Minecraft ที่บ้าน</h2>
-    <p class="text-pink-200 leading-relaxed mb-4">
-      คอมพิวเตอร์อีกเครื่องในบ้านของ MaxGuMu ชื่อว่า <strong>น้องอัลฟ่า</strong> ใช้สำหรับเปิดเซิร์ฟเวอร์ Minecraft เพื่อให้เพื่อนๆ หรือคนในบ้านสามารถเข้าเล่นด้วยกันได้แบบ LAN หรือแบบ IP ภายใน
-    </p>
-    <ul class="list-disc text-pink-200 ml-6 space-y-1">
-      <li><strong>CPU:</strong> Intel Pentium G4400</li>
-      <li><strong>RAM:</strong> 8GB DDR4 2133MHz (4GB x 2)</li>
-      <li><strong>Mainboard:</strong> GIGABYTE H110M-DS2</li>
-      <li><strong>Storage:</strong> HDD 250GB 7200RPM WD Blue</li>
-      <li><strong>Case:</strong> Chi-La Gview</li>
-      <li><strong>OS:</strong> Windows 8.1 Pro</li>
-      <li><strong>หน้าที่:</strong> ใช้เป็น Server Minecraft ภายในบ้าน</li>
-    </ul>
-    <p class="text-pink-200 mt-4">
-      แม้จะเป็นเครื่องเก่า แต่ก็สามารถรันเซิร์ฟเวอร์ Minecraft ได้ดีสำหรับผู้เล่น 5-10 คนแบบลื่นๆ โดยไม่ต้องใช้ทรัพยากรเยอะ
-    </p>
-  </article>
-
-  <!-- บทความ 3: น้องเบต้า -->
+  <!-- บทความ 2: รวมอุปกรณ์ของ MaxGuMu -->
   <article class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition">
-    <h2 class="text-2xl font-bold text-pink-300 mb-4">🖥️ น้องเบต้า - อุปกรณ์ทำคลิปของ MaxGuMu</h2>
-    <p class="text-pink-200 leading-relaxed mb-4">
-      คอมหลักที่ใช้ตัดต่อ ทำคลิป และเล่นเกมเบาๆ ของเราชื่อว่า <strong>น้องเบต้า</strong> เป็นเครื่องที่ประกอบจากของมือสองและอะไหล่ประหยัด แต่ใช้งานได้ดีมาก
-    </p>
-    <ul class="list-disc text-pink-200 ml-6 space-y-1">
+    <h2 class="text-2xl font-bold text-pink-300 mb-4">💻 อุปกรณ์ของ MaxGuMu – น้องเบต้า & น้องอัลฟ่า</h2>
+
+    <!-- น้องเบต้า -->
+    <h3 class="text-xl font-semibold text-pink-200 mt-2 mb-2">🖥️ น้องเบต้า – คอมทำคลิปหลัก</h3>
+    <ul class="list-disc text-pink-200 ml-6 space-y-1 mb-4">
       <li><strong>CPU:</strong> AMD Athlon 3000G</li>
       <li><strong>RAM:</strong> 16GB DDR4 3200MHz (8GB x 2)</li>
       <li><strong>Mainboard:</strong> MSI A320M-A Pro</li>
@@ -82,8 +62,22 @@
       <li><strong>Case:</strong> Cooler Master N200</li>
       <li><strong>OS:</strong> Linux Mint 22.1 และ Windows 11 Pro 24H2</li>
     </ul>
-    <p class="text-pink-200 mt-4">
-      คอมเครื่องนี้อาจไม่แรงที่สุด แต่ก็เพียงพอสำหรับงานตัดต่อเบาๆ และทำ YouTube ด้วยความคุ้มค่าแบบสุดๆ!
+    <p class="text-pink-200 mb-6">
+      ใช้ตัดต่อ ทำคลิป YouTube และงานทั่วไปได้สบาย แม้จะไม่ใช่คอมแรงมาก แต่ใช้งานได้คุ้มสุด!
+    </p>
+
+    <!-- น้องอัลฟ่า -->
+    <h3 class="text-xl font-semibold text-pink-200 mt-2 mb-2">🖧 น้องอัลฟ่า – คอมเปิดเซิร์ฟ Minecraft</h3>
+    <ul class="list-disc text-pink-200 ml-6 space-y-1 mb-4">
+      <li><strong>CPU:</strong> Intel Pentium G4400</li>
+      <li><strong>RAM:</strong> 8GB DDR4 2133MHz (4GB x 2)</li>
+      <li><strong>Mainboard:</strong> GIGABYTE H110M-DS2</li>
+      <li><strong>Storage:</strong> HDD 250GB 7200RPM WD Blue</li>
+      <li><strong>Case:</strong> Chi-La Gview</li>
+      <li><strong>OS:</strong> Windows 8.1 Pro</li>
+    </ul>
+    <p class="text-pink-200">
+      ใช้เป็น Server Minecraft ภายในบ้าน เล่นกับเพื่อนได้ 5–10 คนลื่น ๆ เหมาะกับการใช้ทรัพยากรต่ำแต่ยังเสถียร!
     </p>
   </article>
 `,
