--- a/index.html
+++ b/index.html
@@ -87,15 +87,24 @@
         <p class="text-pink-200 mt-2">ผมเชื่อว่าใครๆ ก็สามารถเริ่มต้นกับไอทีได้ โดยไม่ต้องมีงบเยอะ ขอแค่เข้าใจและรู้จักเลือกอุปกรณ์ให้เหมาะสม</p>
       `,
       product: `
-       <h1 class="text-4xl font-bold mb-4 text-pink-400">ช่อง YouTube ของเรา</h1>
-       <p class="text-pink-200 mb-4">
-  พบกับวิดีโอเกี่ยวกับคอมมือสอง รีวิวสินค้า และทริคเทคโนโลยีมากมายบนช่อง <strong>MaxGuMu</strong> ของเรา!
+  <h1 class="text-4xl font-bold mb-4 text-pink-400">ผลงานของ MaxGuMu</h1>
+  
+  <p class="text-pink-200 mb-4">
+    พบกับคลิปเกี่ยวกับ <strong>MMD, อนิเมะ, ไลฟ์สไตล์ และอื่นๆ</strong> ได้บนช่อง YouTube และนิยายบน ReadAWrite ของเรา!
   </p>
-<a href="https://www.youtube.com/@MaxGuMuChan" target="_blank"
-   class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition">
-  ▶ ไปที่ช่อง YouTube: @MaxGuMuChan
-</a>
-      `
+
+  <!-- YouTube Link -->
+  <a href="https://www.youtube.com/@MaxGuMuChan" target="_blank"
+     class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition mb-4 mr-4">
+    ▶ ช่อง YouTube: MaxGuMu
+  </a>
+
+  <!-- ReadAWrite Link -->
+  <a href="https://www.readawrite.com/a/447d61b16e55787320cefbc4107cbc5b" target="_blank"
+     class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition">
+    📖 อ่านนิยายบน ReadAWrite
+  </a>
+`
     };
 
     function navigate(page) {
