--- a/index.html
+++ b/index.html
@@ -82,11 +82,29 @@
   </article>
 `,
       about: `
-        <h1 class="text-4xl font-bold mb-4 text-pink-400">About Me</h1>
-        <p class="text-pink-200">สวัสดีครับ! ผมชื่อ Max ผู้ก่อตั้งเว็บไซต์ MaxGuMu เป็นคนที่รักการแต่งคอม ทำคอมมือสอง และช่วยให้คนได้ใช้งานเทคโนโลยีอย่างคุ้มค่า</p>
-        <p class="text-pink-200 mt-2">ผมเชื่อว่าใครๆ ก็สามารถเริ่มต้นกับไอทีได้ โดยไม่ต้องมีงบเยอะ ขอแค่เข้าใจและรู้จักเลือกอุปกรณ์ให้เหมาะสม</p>
-      `,
-      product: `
+  <h1 class="text-4xl font-bold mb-6 text-pink-400">เกี่ยวกับ MaxGuMu</h1>
+  <p class="text-pink-200 leading-relaxed mb-4">
+    สวัสดีครับ! ผมคือ <strong>MaxGuMu</strong> ผู้ชื่นชอบการสร้างสรรค์คลิป MMD, Minecraft, ไลฟ์สไตล์ และอนิเมะ  
+    ผมเริ่มจากการทำคลิปเล่น ๆ ด้วยอุปกรณ์บ้าน ๆ และ Linux ก่อนจะพัฒนาเป็นช่องทางแบ่งปันความรู้และความสนุกในแบบของตัวเอง
+  </p>
+
+  <p class="text-pink-200 leading-relaxed mb-4">
+    🔧 ใช้อุปกรณ์ DIY ที่คุ้มค่า<br>
+    🐧 ชอบ Linux เพราะเบา ปรับแต่งได้อิสระ<br>
+    🎥 ทำคลิป MMD และเกมด้วยใจล้วน ๆ
+  </p>
+
+  <p class="text-pink-200 leading-relaxed mb-6">
+    🎬 รับชมคลิปของผมบน  
+    <a href="https://www.youtube.com/@MaxGuMuChan" target="_blank" class="text-pink-400 underline">YouTube: MaxGuMu</a><br>
+    📖 อ่านนิยายบน  
+    <a href="https://www.readawrite.com/a/447d61b16e55787320cefbc4107cbc5b" target="_blank" class="text-pink-400 underline">ReadAWrite</a><br>
+    📱 ช่องทางบันเทิงอื่นนอกจาก YouTube:  
+    <a href="https://www.tiktok.com/@maxgumu2088?_t=ZS-8xPEttYa0H3&_r=1" target="_blank" class="text-pink-400 underline">TikTok @maxgumu2088</a>
+  </p>
+`,
+
+product: `
   <h1 class="text-4xl font-bold mb-4 text-pink-400">ผลงานของ MaxGuMu</h1>
   
   <p class="text-pink-200 mb-4">
@@ -101,8 +119,14 @@
 
   <!-- ReadAWrite Link -->
   <a href="https://www.readawrite.com/a/447d61b16e55787320cefbc4107cbc5b" target="_blank"
-     class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition">
+     class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition mr-4">
     📖 อ่านนิยายบน ReadAWrite
+  </a>
+
+  <!-- TikTok Link -->
+  <a href="https://www.tiktok.com/@maxgumu2088?_t=ZS-8xPEttYa0H3&_r=1" target="_blank"
+     class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition">
+    🎵 TikTok @maxgumu2088
   </a>
 `
     };
