--- a/index.html
+++ b/index.html
@@ -105,28 +105,13 @@
 `,
 
 product: `
-  <h1 class="text-4xl font-bold mb-4 text-pink-400">ผลงานของ MaxGuMu</h1>
-  
-  <p class="text-pink-200 mb-4">
-    พบกับคลิปเกี่ยวกับ <strong>MMD, อนิเมะ, ไลฟ์สไตล์ และอื่นๆ</strong> ได้บนช่อง YouTube และนิยายบน ReadAWrite ของเรา!
+  <h1 class="text-4xl font-bold mb-4 text-pink-400">โปรเจคต์อื่นของ MaxGuMu</h1>
+  <p class="text-pink-200 mb-6">
+    ดูโปรเจคต์อื่น ๆ และโค้ดทั้งหมดได้ที่ GitHub ของผมครับ:
   </p>
-
-  <!-- YouTube Link -->
-  <a href="https://www.youtube.com/@MaxGuMuChan" target="_blank"
-     class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition mb-4 mr-4">
-    ▶ ช่อง YouTube: MaxGuMu
-  </a>
-
-  <!-- ReadAWrite Link -->
-  <a href="https://www.readawrite.com/a/447d61b16e55787320cefbc4107cbc5b" target="_blank"
-     class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition mr-4">
-    📖 อ่านนิยายบน ReadAWrite
-  </a>
-
-  <!-- TikTok Link -->
-  <a href="https://www.tiktok.com/@maxgumu2088?_t=ZS-8xPEttYa0H3&_r=1" target="_blank"
+  <a href="https://github.com/MaxGuMu2133/MaxGuMu.github.io.git" target="_blank"
      class="inline-block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow transition">
-    🎵 TikTok @maxgumu2088
+    📂 GitHub Repository
   </a>
 `
     };
