--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
     <a href="https://www.youtube.com/@MaxGuMuChan" target="_blank" class="text-pink-400 underline">YouTube: MaxGuMu</a><br>
     📖 อ่านนิยายบน  
     <a href="https://www.readawrite.com/a/447d61b16e55787320cefbc4107cbc5b" target="_blank" class="text-pink-400 underline">ReadAWrite</a><br>
-    📱 ช่องทางบันเทิงอื่นนอกจาก YouTube:  
-    <a href="https://www.tiktok.com/@maxgumu2088?_t=ZS-8xPEttYa0H3&_r=1" target="_blank" class="text-pink-400 underline">TikTok @maxgumu2088</a>
+    📱 ช่องทางบันเทิงอื่น ๆ:  
+    <a href="https://www.tiktok.com/@maxgumu2088?_t=ZS-8xPEttYa0H3&_r=1" target="_blank" class="text-pink-400 underline">TikTok @maxgumu2088</a><br>
+    🐦 ติดตามผมได้ที่ <a href="https://x.com/MaxGuMu?t=6M8TT7NaHxYwMeDqNLppLw&s=09" target="_blank" class="text-pink-400 underline">X @MaxGuMu</a>
   </p>
 `,
-
 product: `
   <h1 class="text-4xl font-bold mb-4 text-pink-400">โปรเจคต์อื่นของ MaxGuMu</h1>
   <p class="text-pink-200 mb-6">
