--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       home: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">ยินดีต้อนรับสู่ MaxGuMu</h1>
         <p class="text-pink-200">ที่นี่คือเว็บไซต์ส่วนตัวของฉัน สำหรับแบ่งปันเรื่องราวเกี่ยวกับคอมพิวเตอร์ ไอที และแรงบันดาลใจต่างๆ</p>
+        <img src="https://github.com/MaxGuMu2133/MaxGuMu.github.io/blob/main/Logo%20home">
       `,
   blog: `
   <h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
