--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h2 class="text-2xl font-bold text-pink-300 mb-4">💻 อุปกรณ์ของ MaxGuMu – น้องเบต้า & น้องอัลฟ่า</h2>
 
     <!-- น้องเบต้า -->
-    <img src="Nongbeta">
+    <img src="Nongbeta.jpg">
     <h3 class="text-xl font-semibold text-pink-200 mt-2 mb-2">🖥️ น้องเบต้า – คอมทำคลิปหลัก</h3>
     <ul class="list-disc text-pink-200 ml-6 space-y-1 mb-4">
       <li><strong>CPU:</strong> AMD Athlon 3000G</li>
@@ -69,7 +69,7 @@
     </p>
 
     <!-- น้องอัลฟ่า -->
-    <img src="Nongalpha">
+    <img src="Nongalpha.jpg">
     <h3 class="text-xl font-semibold text-pink-200 mt-2 mb-2">🖧 น้องอัลฟ่า – คอมเปิดเซิร์ฟ Minecraft</h3>
     <ul class="list-disc text-pink-200 ml-6 space-y-1 mb-4">
       <li><strong>CPU:</strong> Intel Pentium G4400</li>
