--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       Linux ฟรี ปลอดภัย ไม่มีไวรัส เหมาะสำหรับการฟื้นฟูเครื่องเก่า หรือใช้ในงานเขียนโค้ด โปรแกรมเมอร์ และคนรักอิสระในการปรับแต่งระบบ
       <br><br>
       MaxGuMu สนับสนุนการใช้ Linux กับคอมมือสองเพื่อความคุ้มค่า ลองดู แล้วคุณอาจหลงรัก Linux เหมือนเรา!
+      <br><br>
+      <h1 Linux</h1> ที่แนะนำสำหรับมือใหม่และคล้าย Windows "Linux Mint" มี 3 แบบพร้อมลิ้ง
+      <h1 1.Linux Mint Cinamon</h1>
     </p>
   </article>
 
