--- a/index.html
+++ b/index.html
@@ -45,7 +45,21 @@
       MaxGuMu สนับสนุนการใช้ Linux กับคอมมือสองเพื่อความคุ้มค่า ลองดู แล้วคุณอาจหลงรัก Linux เหมือนเรา!
       <br><br>
       <h1 class="text-2xl font-bold text-pink-300 mb-4">Linux Mint</h1> ที่แนะนำสำหรับมือใหม่และคล้าย Windows "Linux Mint" มี 3 แบบพร้อมลิ้ง
-      <h1>1.Linux Mint Cinamon</h1>
+      <h1 class="text-2xl font-bold text-pink-300 mb-4">1.Linux Mint Cinamon</h1> สเปกที่ผมแนะนำ
+      Intel Core i Gen6 ,AMD Ryzen 1000 Series ขึ้นไป (Athlon 200GE ,3000G ก็ลงได้)
+      RAM2GB (แนะนำ 4GB ขึ้นไป)
+      Storage 20GB (แนะนำเป็น SSD 100GB ขึ้นไป)
+      <a herf="https://mirrors.cicku.me/linuxmint/iso/stable/22.1/linuxmint-22.1-cinnamon-64bit.iso">Cinnamon</a><br>
+      <h1 class="text-2xl font-bold text-pink-300 mb-4">2.Linux Mint MATE</h1>
+      Intel Core i Gen2-5 หรือเทียบเท่า
+      RAM2GB (แนะนำ 4GB ขึ้นไป)
+      Storage 20GB (แนะนำเป็น SSD 100GB ขึ้นไป)
+      <a herf="https://mirrors.cicku.me/linuxmint/iso/stable/22.1/linuxmint-22.1-mate-64bit.iso">MATE</a><br>
+      <h1 class="text-2xl font-bold text-pink-300 mb-4">3.Linux Mint Xfce</h1>
+      Intel Core2 Duo ,Core2 Quad or Core i Gen1 หรือเทียบ
+      RAM2GB (แนะนำ 4GB ขึ้นไป)
+      Storage 20GB (แนะนำเป็น SSD 100GB ขึ้นไป)
+      <a herf="https://mirrors.cicku.me/linuxmint/iso/stable/22.1/linuxmint-22.1-xfce-64bit.iso">Xfce</a><br>
     </p>
   </article>
 
