--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
       <br><br>
       <h1 class="text-2xl font-bold text-pink-300 mb-4">Linux Mint</h1> ที่แนะนำสำหรับมือใหม่และคล้าย Windows "Linux Mint" มี 3 แบบพร้อมลิ้ง
       <h1 class="text-2xl font-bold text-pink-300 mb-4">1.Linux Mint Cinamon</h1> สเปกที่ผมแนะนำ
-      Intel Core i Gen6 ,AMD Ryzen 1000 Series ขึ้นไป (Athlon 200GE ,3000G ก็ลงได้)
-      RAM2GB (แนะนำ 4GB ขึ้นไป)
-      Storage 20GB (แนะนำเป็น SSD 100GB ขึ้นไป)
+      <p>Intel Core i Gen6 ,AMD Ryzen 1000 Series ขึ้นไป (Athlon 200GE ,3000G ก็ลงได้)</p>
+      <p>RAM2GB (แนะนำ 4GB ขึ้นไป)</p>
+      <p>Storage 20GB (แนะนำเป็น SSD 100GB ขึ้นไป)</p>
       <a href="https://mirrors.cicku.me/linuxmint/iso/stable/22.1/linuxmint-22.1-cinnamon-64bit.iso target="_blank" class="text-pink-400 underline">Cinnamon</a><br>
       <h1 class="text-2xl font-bold text-pink-300 mb-4">2.Linux Mint MATE</h1>
-      Intel Core i Gen2-5 หรือเทียบเท่า
-      RAM2GB (แนะนำ 4GB ขึ้นไป)
-      Storage 20GB (แนะนำเป็น SSD 100GB ขึ้นไป)
+      <p>Intel Core i Gen2-5 หรือเทียบเท่า</p>
+      <p>RAM2GB (แนะนำ 4GB ขึ้นไป)</p>
+      <p>Storage 20GB (แนะนำเป็น SSD 100GB ขึ้นไป)</p>
       <a href="https://mirrors.cicku.me/linuxmint/iso/stable/22.1/linuxmint-22.1-mate-64bit.iso target="_blank" class="text-pink-400 underline">MATE</a><br>
       <h1 class="text-2xl font-bold text-pink-300 mb-4">3.Linux Mint Xfce</h1>
-      Intel Core2 Duo ,Core2 Quad or Core i Gen1 หรือเทียบ
-      RAM2GB (แนะนำ 4GB ขึ้นไป)
-      Storage 20GB (แนะนำเป็น SSD 100GB ขึ้นไป)
+      <p>Intel Core2 Duo ,Core2 Quad or Core i Gen1 หรือเทียบ</p>
+      <p>RAM2GB (แนะนำ 4GB ขึ้นไป)</p>
+      <p>Storage 20GB (แนะนำเป็น SSD 100GB ขึ้นไป</p>)
       <a href="https://mirrors.cicku.me/linuxmint/iso/stable/22.1/linuxmint-22.1-xfce-64bit.iso target="_blank" class="text-pink-400 underline">Xfce</a><br>
     </p>
   </article>
