--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     const pages = {
       home: `
         <h1 class="text-4xl font-bold mb-4 text-pink-400">ยินดีต้อนรับสู่ MaxGuMu</h1>
-        <p class="text-pink-200">ที่นี่คือเว็บไซต์ส่วนตัวของฉัน สำหรับแบ่งปันเรื่องราวเกี่ยวกับคอมพิวเตอร์ ไอที และแรงบันดาลใจต่างๆ</p>
+        <p class="text-pink-200">ที่นี่คือเว็บไซต์ส่วนตัวของผม สำหรับแบ่งปันเรื่องราวเกี่ยวกับคอมพิวเตอร์ MMD และแรงบันดาลใจต่างๆ</p>
         <img src="Logo home">
       `,
   blog: `
