--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- น้องอัลฟ่า -->
     <img src="Nongalpha.jpg">
-    <h3 class="text-xl font-semibold text-pink-200 mt-2 mb-2">🖧 น้องอัลฟ่า – คอมเปิดเซิร์ฟ Minecraft</h3>
+    <h3 class="text-xl font-semibold text-pink-200 mt-2 mb-2">🖥️ น้องอัลฟ่า – คอมเปิดเซิร์ฟ Minecraft</h3>
     <ul class="list-disc text-pink-200 ml-6 space-y-1 mb-4">
       <li><strong>CPU:</strong> Intel Pentium G4400</li>
       <li><strong>RAM:</strong> 8GB DDR4 2133MHz (4GB x 2)</li>
