--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
       ใช้เป็น Server Minecraft ภายในบ้าน เล่นกับเพื่อนได้ 5–10 คนลื่น ๆ เหมาะกับการใช้ทรัพยากรต่ำแต่ยังเสถียร!
     </p>
   </article>
+<h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
+
+<!-- ปุ่มบทความเดียว -->
+<div class="grid gap-4 mb-6">
+  <a href="#budget-specs" class="block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow text-center transition">
+    🖥️ สเปกคอมแนะนำสำหรับคนงบน้อย
+  </a>
+</div>
 `,
       about: `
   <h1 class="text-4xl font-bold mb-6 text-pink-400">เกี่ยวกับ MaxGuMu</h1>
