--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
 <h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
 
 <!-- ปุ่มบทความเดียว -->
+<div class="grid gap-4 mb-6">
+  <a href="#budget-specs" class="block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow text-center transition">
+    🖥️ สเปกคอมแนะนำสำหรับคนงบน้อย
+  </a>
+  
 <article id="budget-specs" class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition mb-6">
   <h2 class="text-2xl font-bold text-pink-300 mb-4">🖥️ สเปกคอมแนะนำสำหรับคนงบน้อย</h2>
 
@@ -122,6 +127,7 @@
     ถ้าใช้งานหนักขึ้นในอนาคต อัปเกรด GPU หรือ SSD เพิ่มได้ทันที
   </p>
 </article>
+</div>
 `,
       about: `
   <h1 class="text-4xl font-bold mb-6 text-pink-400">เกี่ยวกับ MaxGuMu</h1>
