--- a/index.html
+++ b/index.html
@@ -102,12 +102,14 @@
   </article>
 <h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
 
-<!-- ปุ่มบทความเดียว -->
+<!-- ปุ่มชื่อบทความ -->
 <div class="grid gap-4 mb-6">
   <a href="#budget-specs" class="block bg-pink-600 hover:bg-pink-700 text-white px-5 py-3 rounded-lg shadow text-center transition">
     🖥️ สเปกคอมแนะนำสำหรับคนงบน้อย
   </a>
-  
+</div>
+
+<!-- บทความสเปกคอมงบน้อย -->
 <article id="budget-specs" class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition mb-6">
   <h2 class="text-2xl font-bold text-pink-300 mb-4">🖥️ สเปกคอมแนะนำสำหรับคนงบน้อย</h2>
 
@@ -127,7 +129,6 @@
     ถ้าใช้งานหนักขึ้นในอนาคต อัปเกรด GPU หรือ SSD เพิ่มได้ทันที
   </p>
 </article>
-</div>
 `,
       about: `
   <h1 class="text-4xl font-bold mb-6 text-pink-400">เกี่ยวกับ MaxGuMu</h1>
