--- a/index.html
+++ b/index.html
@@ -121,9 +121,17 @@
     </ul>
 
     <p class="mt-4 text-pink-300">
-      💡 <strong>เหมาะกับ:</strong> ผู้เริ่มต้นทำงานคลิป, เล่นเกมทั่วไป (Minecraft, Roblox, Genshin 720p), ทำ MMD, หรือใช้เป็นคอมพ์ตัดต่อเบา ๆ  
+      💡 <strong>เหมาะกับ:</strong> ผู้เริ่มต้นทำงานคลิป, เล่นเกมทั่วไป (Minecraft, Roblox, ทำ MMD), ตัดต่อเบา ๆ หรือใช้เป็นเครื่องเรียนออนไลน์  
       ถ้าใช้งานหนักขึ้นในอนาคต อัปเกรด GPU หรือ SSD เพิ่มได้ทันที
     </p>
+
+    <div class="mt-6 text-pink-200">
+      <h3 class="text-xl font-semibold text-pink-300 mb-2">🎮 ทดสอบ Genshin Impact</h3>
+      <ul class="list-disc pl-6 space-y-1">
+        <li>📌 <strong>720p + Low:</strong> เฟรมเรตนิ่งที่ 60FPS (ล็อกเฟรมเรตไว้)</li>
+        <li>📌 <strong>720p + Medium:</strong> อยู่ระหว่าง 45-60FPS แล้วแต่ฉาก</li>
+      </ul>
+    </div>
   </div>
 </details>
 `,
