--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     <div class="mt-6 text-pink-200">
       <h3 class="text-xl font-semibold text-pink-300 mb-2">🎮 ทดสอบ Genshin Impact</h3>
       <ul class="list-disc pl-6 space-y-1">
-        <li>📌 <strong>720p + Low:</strong> เฟรมเรตนิ่งที่ 60FPS (ล็อกเฟรมเรตไว้)</li>
-        <li>📌 <strong>720p + Medium:</strong> อยู่ระหว่าง 45-60FPS แล้วแต่ฉาก</li>
+        <li>📌 <strong>720p + Low Render 1.0:</strong> เฟรมเรตนิ่งที่ 60FPS (ล็อกเฟรมเรตไว้)</li>
+        <li>📌 <strong>720p + Medium Render 1.0:</strong> อยู่ระหว่าง 45-60FPS แล้วแต่ฉาก</li>
       </ul>
     </div>
   </div>
