--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       ใช้เป็น Server Minecraft ภายในบ้าน เล่นกับเพื่อนได้ 5–10 คนลื่น ๆ เหมาะกับการใช้ทรัพยากรต่ำแต่ยังเสถียร!
     </p>
   </article>
-<h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
+<h1 class="text-4xl font-bold mb-6 text-pink-400">บทความย่อยต่างๆ</h1>
 
 <!-- ใช้ <details> ซ่อน–แสดงบทความ -->
 <details class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition mb-6">
