--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       ใช้เป็น Server Minecraft ภายในบ้าน เล่นกับเพื่อนได้ 5–10 คนลื่น ๆ เหมาะกับการใช้ทรัพยากรต่ำแต่ยังเสถียร!
     </p>
   </article>
-<h1 class="text-4xl font-bold mb-6 text-pink-400">บทความย่อยต่างๆ</h1>
+<h1 class="text-4xl font-bold mb-6 text-pink-400">Blog</h1>
 
 <!-- ใช้ <details> ซ่อน–แสดงบทความ -->
 <details class="bg-pink-900 bg-opacity-10 p-6 rounded-lg shadow hover:shadow-lg transition mb-6">
@@ -126,13 +126,15 @@
     </p>
 
     <div class="mt-6 text-pink-200">
-      <h3 class="text-xl font-semibold text-pink-300 mb-2">🎮 ทดสอบ Genshin Impact</h3>
+      <h3 class="text-xl font-semibold text-pink-300 mb-2">🎮 ทดสอบประสิทธิภาพเกม</h3>
       <ul class="list-disc pl-6 space-y-1">
-        <li>📌 <strong>720p + Low Render 1.0:</strong> เฟรมเรตนิ่งที่ 60FPS (ล็อกเฟรมเรตไว้)</li>
-        <li>📌 <strong>720p + Medium Render 1.0:</strong> อยู่ระหว่าง 45-60FPS แล้วแต่ฉาก</li>
+        <li>📌 <strong>Genshin Impact 720p + Low:</strong> เฟรมเรตนิ่งที่ 60FPS (ล็อกเฟรมเรตไว้)</li>
+        <li>📌 <strong>Genshin Impact 720p + Medium:</strong> อยู่ระหว่าง 45-60FPS แล้วแต่ฉาก</li>
+        <li>📌 <strong>ROBLOX: Frontlines Graphics Quality 2/10:</strong> ทำเฟรมเรตได้ 60FPS ลื่น ๆ</li>
       </ul>
     </div>
   </div>
+</details>
 </details>
 `,
       about: `
