--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <li><strong>SSD2:</strong> WD Green 120GB SATA3</li>
       <li><strong>HDD:</strong> 500GB 7200RPM × 2 ลูก</li>
       <li><strong>Case:</strong> Cooler Master N200</li>
-      <li><strong>OS:</strong> Linux Mint 22.1 และ Windows 11 Pro 24H2</li>
+      <li><strong>OS:</strong> Ubuntu 24.04.2 LTS และ Windows 11 Pro 24H2</li>
     </ul>
     <p class="text-pink-200 mb-6">
       ใช้ตัดต่อ ทำคลิป YouTube และงานทั่วไปได้สบาย แม้จะไม่ใช่คอมแรงมาก แต่ใช้งานได้คุ้มสุด!
