--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
     <img src="Nongbeta.jpg">
     <h3 class="text-xl font-semibold text-pink-200 mt-2 mb-2">🖥️ น้องเบต้า – คอมทำคลิปหลัก</h3>
     <ul class="list-disc text-pink-200 ml-6 space-y-1 mb-4">
-      <li><strong>CPU:</strong> AMD Athlon 3000G</li>
-      <li><strong>RAM:</strong> 16GB DDR4 3200MHz (8GB x 2)</li>
+      <li><strong>CPU:</strong> AMD Ryzen 5 1600</li>
+      <li><strong>RAM:</strong> 24GB DDR4 3200MHz (16+8GB)</li>
       <li><strong>Mainboard:</strong> MSI A320M-A Pro</li>
       <li><strong>GPU:</strong> Nvidia GeForce GT 1030 2GB GDDR5</li>
       <li><strong>SSD:</strong> T-Force Vulcan 256GB SATA3</li>
       <li><strong>SSD2:</strong> WD Green 120GB SATA3</li>
       <li><strong>HDD:</strong> 500GB 7200RPM × 2 ลูก</li>
       <li><strong>Case:</strong> Cooler Master N200</li>
-      <li><strong>OS:</strong> Ubuntu 24.04.2 LTS และ Windows 11 Pro 24H2</li>
+      <li><strong>Case:</strong> MSI A600DN 600Watt 80plus White</li>
+      <li><strong>OS:</strong> Ubuntu 24.04.2 LTS และ Nobara 42</li>
     </ul>
     <p class="text-pink-200 mb-6">
       ใช้ตัดต่อ ทำคลิป YouTube และงานทั่วไปได้สบาย แม้จะไม่ใช่คอมแรงมาก แต่ใช้งานได้คุ้มสุด!
