--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
       <li><strong>Mainboard:</strong> MSI A320M-A Pro</li>
       <li><strong>GPU:</strong> Nvidia GeForce GT 1030 2GB GDDR5</li>
       <li><strong>SSD:</strong> T-Force Vulcan 256GB SATA3</li>
-      <li><strong>SSD2:</strong> WD Green 120GB SATA3</li>
       <li><strong>HDD:</strong> 500GB 7200RPM × 2 ลูก</li>
       <li><strong>Case:</strong> Cooler Master N200</li>
       <li><strong>Case:</strong> MSI A600DN 600Watt 80plus White</li>
-      <li><strong>OS:</strong> Ubuntu 24.04.2 LTS และ Nobara 42</li>
+      <li><strong>OS:</strong> Manjaro 24.04 KDE Plasma</li>
     </ul>
     <p class="text-pink-200 mb-6">
       ใช้ตัดต่อ ทำคลิป YouTube และงานทั่วไปได้สบาย แม้จะไม่ใช่คอมแรงมาก แต่ใช้งานได้คุ้มสุด!
@@ -183,3 +182,4 @@ product: `
 
 </body>
 </html>
+
